--- a/views/collection/collection.hbs
+++ b/views/collection/collection.hbs
@@ -18,7 +18,39 @@
 </div>
 
 {{!-- CLIENT SIDE RENDERING DEPENDING ON SUBCAT --}}
-<div>
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        {{#each meme}}
+        {{!-- need to hide class 'active' when not displayed in client side --}}
+      <div class="item active">
+        <img src="https://placehold.it/1200x400?text=IMAGE" alt="Image">
+        <div class="carousel-caption">
+          <h3>{{this.name}}</h3>
+          <p>{{this.author}}</p>
+        </div>      
+      </div>
+      {{/each}}
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+</div>
+
+{{!-- <div>
     <ul>
     {{#each meme}}
     <img>
@@ -27,4 +59,4 @@
     <li>{{this.tags}}</li>
     {{/each}}
     </ul>
-</div>
+</div> --}}
