--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,36 @@
 {{> navbar}}
 
-<h1>TZ</h1>
-<h2>Subtitle</h2>
-
 <main>
-<div>
-    <img>
+<div class="jumbotron">
+  <div class="container text-center">
+    <h1>TZ MEME MAKER</h1>      
+    <p>WHERE MEMES COME TO LIFE</p>
+  </div>
 </div>
-<div>
+
+<div class="container text-center">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, odit. Illo deserunt suscipit enim, hic voluptatem nostrum magnam nisi dolore doloribus doloremque optio ipsam ratione voluptatibus quam ab quasi adipisci.</p>
 </div>
 </main>
+
+<div class="container-fluid bg-3 text-center">    
+  <h3>Memes to inspire you</h3><br>
+  <div class="row">
+    <div class="col-sm-3">
+      <p>Lorem ipsum</p>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3"> 
+      <p>Dolor sit amet</p>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3"> 
+      <p>Consectetur adipisicing elit</p>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3">
+      <p>Consectetur quaerat</p>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+  </div>
+</div><br>
