--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,3 +1,44 @@
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">TZ</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/collection">Meme Collection</a></li>
+                <li><a href="/about">About Services</a></li>
+            </ul>
+            {{#if isLoggedin}}
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/fox.jpg"
+                        width="40" height="40" class="rounded-circle">
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="/profile/{{id}}">{{username}}</a>
+                    <a class="dropdown-item" href="/logout">Log Out</a>
+                </div>
+            </li>
+            {{else}}
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            </ul>
+            {{/if}}
+        </div>
+    </div>
+</nav>
+
+
+
+
+{{!-- version 1 --}}
 {{!-- <nav class="navatar blue-grey">
   <div class="nav-wrapper container">
     <a href="#" class="brand-logo left">TZ MEME MAKER</a>
@@ -18,7 +59,7 @@
     <li><a href="/logout">Logout</a></li>
   </ul> --}}
 
-  {{!-- version 2 --}}
+{{!-- version 2
   <nav class="navbar navbar-dark bg-dark navbar-expand-sm">
   <a class="navbar-brand" href="#">
     <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/logo_white.png" width="30" height="30" alt="logo">
@@ -40,4 +81,4 @@
       </li>   
     </ul>
   </div>
-</nav>
+</nav> --}}
