--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -4,8 +4,9 @@
 
 /* Add a gray background color and some padding to the footer */
 footer {
-    background-color: #f2f2f2;
+    background-color: #555;
     padding: 25px;
+    color: white;
   }
 
   .carousel-inner img {
@@ -14,9 +15,39 @@ footer {
     min-height:200px;
 }
 
-/* Hide the carousel text when the screen is less than 600 pixels wide */
-@media (max-width: 600px) {
-  .carousel-caption {
-    display: none; 
-  }
+
+
+
+/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
+.row.content {height: 450px}
+    
+/* Set gray background color and 100% height */
+.sidenav {
+  padding-top: 50px;
+  background-color: #f1f1f1;
+  height: 100%;
 }
+
+body{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.special-img 
+{
+    position: relative;
+    top: -5px;
+    float: left;
+    left: -5px;
+}
+
+/* Hide the carousel text when the screen is less than 600 pixels wide */
+ /* On small screens, set height to 'auto' for sidenav and grid */
+ @media screen and (max-width: 767px) {
+    .sidenav {
+      display: hidden;
+    }
+    .row.content {height:auto;} 
+    .carousel-caption {
+        display: none; 
+      }
+  }
