--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,7 +16,7 @@
     {{{body}}}
 
 <footer class="container-fluid text-center">
-  <p>Copyright </p>
+  <p>Copyright of TZ Meme Maker © </p>
 </footer>
 </body>
 
