--- a/views/partials/weaknavbar.hbs
+++ b/views/partials/weaknavbar.hbs
@@ -12,27 +12,10 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav ">
-                <li class="active"><a href="/">Home</a></li>
-                <li><a href="/collection">Meme Collection</a></li>
-                <li><a href="/about">About Services</a></li>
+                <li class=""><a href="/">Home</a></li>
+                <li class=""><a href="/login">Login</a></li>
+                <li class="active"><a href="/register">Register</a></li>
             </ul>
-            {{#if isLoggedin}}
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/fox.jpg"
-                        width="40" height="40" class="rounded-circle">
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="/profile/{{id}}">{{username}}</a>
-                    <a class="dropdown-item" href="/logout">Log Out</a>
-                </div>
-            </li>
-            {{else}}
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            </ul>
-            {{/if}}
         </div>
     </div>
 </nav>
