--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,7 +15,9 @@
 
 <div class="container-fluid bg-3 text-center">    
   <h3>Memes to inspire you</h3><br>
+  
   <div class="row">
+    {{!-- EXAMPLE PICTURES --}}
     <div class="col-sm-3">
       <p>Lorem ipsum</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
@@ -32,5 +34,14 @@
       <p>Consectetur quaerat</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
     </div>
+    {{!-- END EXAMPLE PICTURES --}}
+    {{!-- REAL HBS  METHOD TO FIND 4 MOST RECENT MEMES--}}
+    {{#each topmemes}}
+    <div class="col-sm-3">
+      <p>{{this.name}}</p>
+      <img src="{{this.imgurl}}" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    {{/each}}
+    {{!-- END REAL HBS --}}
   </div>
 </div><br>
