--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -3,7 +3,7 @@
 <div class="container row">
     <div class="jumbotron col-sm-4 pull-center">
         <h2> Register</h2>
-        <form action="/registration" method="post">
+        <form action="/reg" method="POST">
             <div>
                 <label>Username:</label>
                 <input type="text" name="username" placeholder="Enter new username">
