--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -35,7 +35,11 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="/profile/{{id}}">{{username}}</a>
+          
+          <a class="dropdown-item" href="/reg">Registration</a>
+          <a class="dropdown-item" href="/login">Login</a>
           <a class="dropdown-item" href="/logout">Log Out</a>
+          
         </div>
       </li>   
     </ul>
