--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,9 @@
 <link rel="stylesheet" href="/public/css/stylesheet.css">
 </head>
 <body>
-  {{{body}}}  
+  <a href="/reg">Registration</a>
+  {{{body}}}
+
 </body>
+
 </html>
