--- a/views/collection/collection.hbs
+++ b/views/collection/collection.hbs
@@ -5,6 +5,14 @@
     <div class="sidenav col-sm-2 ">
     </div>
     <div class="col-sm-8 text-left">
+      {{!-- SEARCH BY TAG --}}
+      <form class="form-inline">
+        <i class="fa fa-search" aria-hidden="true"></i>
+        <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search tags" aria-label="Search">
+      </form>
+      {{!-- END --}}
+      <br>
+      {{!-- SEARCH BY CATEGORY --}}
       {{!-- TEST VERSION --}}
       <div class="btn-group btn-group-justified">
         <a href="/Dogs" class="btn btn-primary">Dogs</a>
@@ -21,58 +29,71 @@
       </div>
       {{!-- END HBS VERSION --}}
     </div>
-<br>
+    <br>
     {{!-- CLIENT SIDE RENDERING DEPENDING ON CATEGORY CHOICE --}}
     {{!-- TEST VERSION SUBCAT --}}
-      <div class="btn-group btn-group-justified">
-        <a href="/Tigers" class="btn btn-primary">Tigers</a>
-        <a href="/Lions" class="btn btn-primary">Lions</a>
-        <a href="/Lazycats" class="btn btn-primary">Lazy Cats</a>
-        <a href="/Cheetahs" class="btn btn-primary">Cheetahs</a>
-        <a href="/sleepingcats" class="btn btn-primary">Sleeping Cats</a>
-      </div>
-      {{!-- END TEST VERSION --}}
-      {{!-- HBS VERSION --}}
-      <div class="btn-group btn-group-justified">
-        {{#each subCat}}
-        <a href="/{{this.name}}" class="btn btn-primary">{{this.name}}</a>
-        {{/each}}
-      </div>
-      {{!-- END HBS VERSION --}}
+    <div class="btn-group btn-group-justified">
+      <a href="/Tigers" class="btn btn-primary">Tigers</a>
+      <a href="/Lions" class="btn btn-primary">Lions</a>
+      <a href="/Lazycats" class="btn btn-primary">Lazy Cats</a>
+      <a href="/Cheetahs" class="btn btn-primary">Cheetahs</a>
+      <a href="/sleepingcats" class="btn btn-primary">Sleeping Cats</a>
+    </div>
+    {{!-- END TEST VERSION --}}
+    {{!-- HBS VERSION --}}
+    <div class="btn-group btn-group-justified">
+      {{#each subCat}}
+      <a href="/{{this.name}}" class="btn btn-primary">{{this.name}}</a>
+      {{/each}}
+    </div>
+    {{!-- END HBS VERSION --}}
 
     {{!-- CLIENT SIDE RENDERING DEPENDING ON SUBCAT --}}
 
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-      </ol>
+    <div class="container">
+      <h2>Carousel Example</h2>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
 
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        {{#each meme}}
-        {{!-- need to hide class 'active' when not displayed in client side --}}
-        <div class="item active">
-          <img src="https://placehold.it/1200x400?text=IMAGE" alt="Image">
-          <div class="carousel-caption">
-            <h3>{{this.name}}</h3>
-            <p>{{this.author}}</p>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+
+          <div class="item active">
+            <img src="/public/images/cat1.jpg" alt="Cat1" style="width:80%;">
+            <div class="carousel-caption">
+              <h3>Purrrr</h3>
+              <p>@topuser</p>
+              <span>cat, purrfect, rrrr</span>
+            </div>
           </div>
+
+          <div class="item">
+            <img src="/public/images/cat2.jpg" alt="Cat2" style="width:100%;">
+            <div class="carousel-caption">
+              <h3>Me so purrfect</h3>
+              <p>cat, lazy cat, sleepy cat</p>
+            </div>
+          </div>
+
         </div>
-        {{/each}}
 
         <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
           <span class="sr-only">Next</span>
         </a>
       </div>
-      <div class="sidenav col-sm-2 ">
-      </div>
+    </div>
+    <div class="sidenav col-sm-2 ">
     </div>
   </div>
+</div>
