--- a/views/collection/collection.hbs
+++ b/views/collection/collection.hbs
@@ -14,6 +14,16 @@
       <br>
       {{!-- SEARCH BY CATEGORY --}}
       {{!-- TEST VERSION --}}
+
+      <div class="gallery js-flickity"
+  data-flickity-options='{ "wrapAround": true }'>
+  
+  <div class="gallery-cell" style="content:'Dogs'"></div>
+  <div class="gallery-cell" style="content:'Cats'"></div>
+  <div class="gallery-cell" style="content:'Penguins'"><a href="/maincat/Penguins" ></a></div>
+  
+</div>
+
       <div class="btn-group btn-group-justified">
         <a href="/Dogs" class="btn btn-primary">Dogs</a>
         <a href="/Cats" class="btn btn-primary">Cats</a>
@@ -50,6 +60,42 @@
 
     {{!-- CLIENT SIDE RENDERING DEPENDING ON SUBCAT --}}
 
+<div class="carousel js-flickity">
+  <!-- images from unsplash.com -->
+  <div class="carousel-cell">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/orange-tree.jpg" alt="orange tree" />
+    <div class="carousel-caption">
+              <h3>Purrrr</h3>
+              <p>@topuser</p>
+              <span>cat, purrfect, rrrr</span>
+            </div>
+  </div>
+  <div class="carousel-cell">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/submerged.jpg" alt="submerged" />
+  </div>
+  <div class="carousel-cell">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/look-out.jpg" alt="look-out" />
+  </div>
+  <div class="carousel-cell">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg" alt="One World Trade" />
+  </div>
+  <div class="carousel-cell">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg" alt="drizzle" />
+  </div>
+  <div class="carousel-cell">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/cat-nose.jpg" alt="cat nose" />
+  </div>
+  <div class="carousel-cell">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/contrail.jpg" alt="contrail" />
+  </div>
+  <div class="carousel-cell">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/golden-hour.jpg" alt="golden hour" />
+  </div>
+  <div class="carousel-cell">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/flight-formation.jpg" alt="flight formation" />
+  </div>
+</div>
+{{!-- 
     <div class="container">
       <h2>Carousel Example</h2>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -96,4 +142,4 @@
     <div class="sidenav col-sm-2 ">
     </div>
   </div>
-</div>
+</div> --}}
