--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/public/css/stylesheet.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/floating-labels.css" rel="stylesheet">
+     <link rel="stylesheet" href="/path/to/flickity.css" media="screen">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
@@ -21,7 +23,7 @@
 <footer class="container-fluid text-center">
   <p>Copyright of TZ Meme Maker © </p>
 </footer>
-
+<script src="/path/to/flickity.pkgd.min.js"></script>
 </body>
 
 </html>
