--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -6,7 +6,7 @@
     </div>
     <div class="col-sm-5 text-left jumbotron pull-center"> 
         <h2><label>Login</label></h2>
-        <form action="/login" method="post"></form>
+        <form action="/login" method="POST">
             <div>
                 <label>Username:</label>
                 <br>
