--- a/views/partials/weaknavbar.hbs
+++ b/views/partials/weaknavbar.hbs
@@ -15,6 +15,7 @@
                 <li class=""><a href="/">Home</a></li>
                 <li class=""><a href="/login">Login</a></li>
                 <li class="active"><a href="/register">Register</a></li>
+                <li class=""><a href="/login/logout">LogOut</a></li>
             </ul>
         </div>
     </div>
