--- a/views/collection/collection.hbs
+++ b/views/collection/collection.hbs
@@ -5,141 +5,138 @@
     <div class="sidenav col-sm-2 ">
     </div>
     <div class="col-sm-8 text-left">
+      {{!-- ADD MEME BUTTON --}}
+      {{#if isLoggedin}}
+      <form action="/create" method="GET">
+        <button type="submit">Create a meme</button>
+      </form>
+      {{/if}}
+
       {{!-- SEARCH BY TAG --}}
-      <form class="form-inline">
+      <div id="search-tag">
+<form class="form-inline">
         <i class="fa fa-search" aria-hidden="true"></i>
         <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search tags" aria-label="Search">
-      </form>
+        </form>
+      </div>
       {{!-- END --}}
       <br>
+      <br>
+
+
       {{!-- SEARCH BY CATEGORY --}}
+
       {{!-- TEST VERSION --}}
+      <div id="selectMainCat">
 
-      <div class="gallery js-flickity"
-  data-flickity-options='{ "wrapAround": true }'>
-  
-  <div class="gallery-cell" style="content:'Dogs'"></div>
-  <div class="gallery-cell" style="content:'Cats'"></div>
-  <div class="gallery-cell" style="content:'Penguins'"><a href="/maincat/Penguins" ></a></div>
-  
-</div>
+        <div class="category js-flickity" data-flickity-options='{ "wrapAround": true }'>
 
-      <div class="btn-group btn-group-justified">
-        <a href="/Dogs" class="btn btn-primary">Dogs</a>
-        <a href="/Cats" class="btn btn-primary">Cats</a>
-        <a href="/Penguins" class="btn btn-primary">Penguins</a>
+          <div class="category-cell"><a href="/maincat/Dogs">Dog</a></div>
+          <div class="category-cell"><a href="/maincat/Cats">Cat</a></div>
+          <div class="category-cell"><a href="/maincat/Penguins">Penguin</a></div>
+
+        </div>
       </div>
+      <br>
+      <br>
       {{!-- END TEST VERSION --}}
 
       {{!-- HBS VERSION --}}
-      <div class="btn-group btn-group-justified">
+      {{!-- <div class="category js-flickity" data-flickity-options='{ "wrapAround": true }'>
         {{#each mainCat}}
-        <a href="/{{this.name}}" class="btn btn-primary">{{this.name}}</a>
+        <div class="category-cell"><a href="/maincat/{{this.name}}">{{this.name}}</a></div>
         {{/each}}
-      </div>
+      </div> --}}
       {{!-- END HBS VERSION --}}
-    </div>
-    <br>
-    {{!-- CLIENT SIDE RENDERING DEPENDING ON CATEGORY CHOICE --}}
-    {{!-- TEST VERSION SUBCAT --}}
-    <div class="btn-group btn-group-justified">
-      <a href="/Tigers" class="btn btn-primary">Tigers</a>
-      <a href="/Lions" class="btn btn-primary">Lions</a>
-      <a href="/Lazycats" class="btn btn-primary">Lazy Cats</a>
-      <a href="/Cheetahs" class="btn btn-primary">Cheetahs</a>
-      <a href="/sleepingcats" class="btn btn-primary">Sleeping Cats</a>
-    </div>
-    {{!-- END TEST VERSION --}}
-    {{!-- HBS VERSION --}}
-    <div class="btn-group btn-group-justified">
-      {{#each subCat}}
-      <a href="/{{this.name}}" class="btn btn-primary">{{this.name}}</a>
-      {{/each}}
-    </div>
-    {{!-- END HBS VERSION --}}
 
-    {{!-- CLIENT SIDE RENDERING DEPENDING ON SUBCAT --}}
+      <br>
 
-<div class="carousel js-flickity">
-  <!-- images from unsplash.com -->
-  <div class="carousel-cell">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/orange-tree.jpg" alt="orange tree" />
-    <div class="carousel-caption">
-              <h3>Purrrr</h3>
-              <p>@topuser</p>
-              <span>cat, purrfect, rrrr</span>
-            </div>
-  </div>
-  <div class="carousel-cell">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/submerged.jpg" alt="submerged" />
-  </div>
-  <div class="carousel-cell">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/look-out.jpg" alt="look-out" />
-  </div>
-  <div class="carousel-cell">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg" alt="One World Trade" />
-  </div>
-  <div class="carousel-cell">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg" alt="drizzle" />
-  </div>
-  <div class="carousel-cell">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/cat-nose.jpg" alt="cat nose" />
-  </div>
-  <div class="carousel-cell">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/contrail.jpg" alt="contrail" />
-  </div>
-  <div class="carousel-cell">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/golden-hour.jpg" alt="golden hour" />
-  </div>
-  <div class="carousel-cell">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/flight-formation.jpg" alt="flight formation" />
-  </div>
-</div>
-{{!-- 
-    <div class="container">
-      <h2>Carousel Example</h2>
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
+      {{!-- CLIENT SIDE RENDERING DEPENDING ON CATEGORY CHOICE --}}
+      {{!-- TEST VERSION SUBCAT --}}
+      <div id="selectSubCat">
+        <div class="category js-flickity" data-flickity-options='{ "wrapAround": true }'>
 
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
+          <div class="category-cell"><a href="/subcat/Tigers">Tigers</a></div>
+          <div class="category-cell"><a href="/subcat/Lions">Lions</a></div>
+          <div class="category-cell"><a href="/subcat/lazycats">Lazy Cats</a></div>
+          <div class="category-cell"><a href="/subcat/Cheetahs">Cheetahs</a></div>
+          <div class="category-cell"><a href="/subcat/sleepingcats">Sleeping Cats</a></div>
 
-          <div class="item active">
-            <img src="/public/images/cat1.jpg" alt="Cat1" style="width:80%;">
+        </div>
+      </div>
+      {{!-- END TEST VERSION --}}
+      {{!-- HBS VERSION --}}
+      {{!-- <div class="subcategory js-flickity" data-flickity-options='{ "wrapAround": true }'>
+        {{#each subCat}}
+        <div class="category-cell"><a href="/maincat/{{this.name}}">{{this.name}}</a></div>
+        {{/each}}
+      </div> --}}
+      {{!-- END HBS VERSION --}}
+
+      <br>
+      <br>
+      {{!-- CLIENT SIDE RENDERING DEPENDING ON SUBCAT --}}
+      <div id="memeCarousel">
+        <div class="carousel js-flickity" data-flickity='{ "cellAlign": "left", "contain": true }'>
+          <!-- images from unsplash.com -->
+          <div class="carousel-cell">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/orange-tree.jpg" alt="orange tree" />
             <div class="carousel-caption">
               <h3>Purrrr</h3>
               <p>@topuser</p>
               <span>cat, purrfect, rrrr</span>
             </div>
           </div>
-
-          <div class="item">
-            <img src="/public/images/cat2.jpg" alt="Cat2" style="width:100%;">
+          <div class="carousel-cell">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/submerged.jpg" alt="submerged" />
             <div class="carousel-caption">
               <h3>Me so purrfect</h3>
               <p>cat, lazy cat, sleepy cat</p>
             </div>
           </div>
-
+          <div class="carousel-cell">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/look-out.jpg" alt="look-out" />
+            <div class="carousel-caption">
+              <h3>Me so purrfect</h3>
+              <p>cat, lazy cat, sleepy cat</p>
+            </div>
+          </div>
+          <div class="carousel-cell">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg" alt="One World Trade" />
+          </div>
+          <div class="carousel-cell">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg" alt="drizzle" />
+          </div>
+          <div class="carousel-cell">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/cat-nose.jpg" alt="cat nose" />
+          </div>
+          <div class="carousel-cell">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/contrail.jpg" alt="contrail" />
+          </div>
+          <div class="carousel-cell">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/golden-hour.jpg" alt="golden hour" />
+          </div>
+          <div class="carousel-cell">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/flight-formation.jpg" alt="flight formation" />
+          </div>
         </div>
-
-        <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
-    </div>
-    <div class="sidenav col-sm-2 ">
+
     </div>
   </div>
-</div> --}}
+
+  <!-- Left and right controls -->
+  {{!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a> --}}
+
+</div>
+<div class="sidenav col-sm-2 ">
+</div>
+</div>
+</div>
