--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -7,6 +7,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+            
+            <i class="navbar-brand fa fa-meh-blank"></i>
             <a class="navbar-brand" href="/">TZ</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
