--- a/views/index.hbs
+++ b/views/index.hbs
@@ -35,11 +35,13 @@
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
     </div>
     {{!-- END EXAMPLE PICTURES --}}
+
+    
     {{!-- REAL HBS  METHOD TO FIND 4 MOST RECENT MEMES--}}
-    {{#each topmemes}}
+    {{#each memes}}
     <div class="col-sm-3">
-      <p>{{this.name}}</p>
-      <img src="{{this.imgurl}}" class="img-responsive" style="width:100%" alt="Image">
+      <p>{{this.text}}</p>
+      <img src="{{this.img}}" class="img-responsive" style="width:100%" alt="Image">
     </div>
     {{/each}}
     {{!-- END REAL HBS --}}
