--- a/views/collection/create.hbs
+++ b/views/collection/create.hbs
@@ -7,37 +7,56 @@
     </div>
     <div class="col-sm-8 text-left">
       <h1>Meme maker</h1>
+      <div class="wrapper col-md-12">
+        <div class="edit-meme col-md-6">
+          <input class="controls__input" type="file" id="imageLoader" name="imageLoader" />
+          <label for="imageLoader">Upload a Picture</label>
+          <input type="submit" value="Create meme" id="createMeme">
+          <p>Your Meme:</p>
+          <div id="edit-meme">
+            <canvas id="canvas">Your browser do not support meme creation, sorry.</canvas>
 
-      <form class="image-selector">
-        <input class="controls__input" type="file" id="imageLoader" name="imageLoader" />
-      </form>
+          </div>
 
-      <form class="text" action="/save" method="POST">
-        <label>Text: <input class="controls__input" id="text" type="text" value="" /></label>
-        <label>Font: <input class="controls__input" id="font" type="text" value="" /></label>
-        <label>Colour: <input class="controls__input" id="font" type="text" value="" /></label>
-        <label>Size: <input class="controls__input" id="font" type="text" value="" /></label>
-        <label>Category:</label>
-        <input list="mainCategory" name="mainCat">
-        <datalist id="mainCategory">
-          {{#each category}}
-          <option value="{{this.mainCategory}}">
-            {{/each}}
-        </datalist>
-        <label>Sub category:</label>
-        <input list="subCategory" name="mainCat">
-        <datalist id="subCategory">
-          {{#each mainCategory}}
-          <option value="{{this.subCategory}}">
-            {{/each}}
-        </datalist>
-        <label>Tags: <input class="controls__input" id="font" type="text" value="" /></label>
-        <input type="submit" value="Save">
-        <label>Add watermark:</label>
-        <input type="checkbox" id="watermark" name="vehicle1" value="@{{username}}">
-      </form>
+        </div>
+        <div class="edit-btn col-md-6 ">
+
+          <h4>Add your personal text</h4>
+
+          <form name="addText" class="text" action="/save" method="POST" id="editForm">
+            <p>Text:</p>
+            <input class="controls__input" id="text" type="text" value="" />
+
+            <p>Font:</p>
+            <select id='fontFamily'>
+              <option value="serif">Serif</option>
+              <option value="Arial">Arial</option>
+              <option value="Helvetica">Helvetica</option>
+           
+            </select>
+
+            <p>Color:</p>
+            <select id='fontColor'>
+              <option value="white">white</option>
+              <option value="black">black</option>
+              <option value="green">green</option>
+            </select>
+            </label>
+
+            <p>Size:</p>
+            <select id='fontSize'>
+              <option value="20px">20</option>
+              <option value="40px">40</option>
+              <option value="60px">60</option>
+            </select>
+
+            <input type="submit" value="Add text" id="addTextSubmit">
+          </form>
+        </div>
+      </div>
     </div>
     <div class="sidenav col-sm-2 ">
     </div>
   </div>
 </div>
+<script defer src="js/edit.js"></script>
