--- a/views/index.hbs
+++ b/views/index.hbs
@@ -45,5 +45,9 @@
     </div>
     {{/each}}
     {{!-- END REAL HBS --}}
-  </div>
+    </div>
+    <br>
+    
+    <span><a href='/collection'>See more...</a></span>
+  
 </div><br>
