--- a/views/index.hbs
+++ b/views/index.hbs
@@ -48,6 +48,10 @@
     </div>
     <br>
     
-    <span><a href='/collection'>See more...</a></span>
+
+    <form class="form-inline" action="/collection" method="GET">
+        <button class="form-control mr-sm-2" type="submit">See more</button>
+      </form>
+    
   
 </div><br>
