--- a/views/partials/subcategory.hbs
+++ b/views/partials/subcategory.hbs
@@ -1,6 +1,5 @@
-
 <div class="subcategory js-flickity" data-flickity-options='{ "wrapAround": true }'>
     {{#each subCat}}
-    <div class="category-cell"><a href="/collection/subcat">{{this.name}}</a></div>
+    <div class="category-cell"><a href="/collection/subcat/{{this}}">{{this}}</a></div>
     {{/each}}
 </div>
