--- a/views/partials/weaknavbar.hbs
+++ b/views/partials/weaknavbar.hbs
@@ -12,9 +12,11 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav ">
+                {{#if user}}
                 <li class=""><a href="/">Home</a></li>
+                {{else}}
                 <li class=""><a href="/login">Login</a></li>
-                <li class="active"><a href="/register">Register</a></li>
+                <li class="active"><a href="/register">Register</a></li>{{/if}}
             </ul>
         </div>
     </div>
