--- a/views/partials/subcategory.hbs
+++ b/views/partials/subcategory.hbs
@@ -1,4 +1,4 @@
-<div class="category " data-flickity-options='{ "wrapAround": true }'>
+<div class="category js-flickity" data-flickity-options='{ "wrapAround": true }'>
     {{#each subCat}}
     <div class="category-cell"><a href="/collection/subcat/{{this.category}}">{{this.category}}</a></div>
     {{/each}}
