--- a/views/collection/collection.hbs
+++ b/views/collection/collection.hbs
@@ -15,15 +15,15 @@
       {{/if}}
 
 
-      {{!-- SEARCH BY TAG --}}
-      <div id="search-tag">
+      {{!-- SEARCH BY TAG FEATURE FOR LATER DATE--}}
+      {{!-- <div id="search-tag">
         <form class="form-inline" action="/collection/search" method="POST">
           <input class="form-control mr-sm-2" type="search" value="" placeholder="Search by tag name"
             aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"
               aria-hidden="true"></i></button>
         </form>
-      </div>
+      </div> --}}
       {{!-- END --}}
 
 
