--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,32 +1,34 @@
 {{> navbar}}
 
 <main>
-<div class="jumbotron">
-  <div class="container text-center">
-    <h1>TZ MEME MAKER</h1>      
-    <p>WHERE MEMES COME TO LIFE</p>
+  <div class="jumbotron">
+    <div class="container text-center">
+      <h1>TZ MEME MAKER</h1>
+      <p>WHERE MEMES COME TO LIFE</p>
+    </div>
   </div>
-</div>
 
-<div class="container text-center">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, odit. Illo deserunt suscipit enim, hic voluptatem nostrum magnam nisi dolore doloribus doloremque optio ipsam ratione voluptatibus quam ab quasi adipisci.</p>
-</div>
+  <div class="container text-center">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, odit. Illo deserunt suscipit enim, hic
+      voluptatem nostrum magnam nisi dolore doloribus doloremque optio ipsam ratione voluptatibus quam ab quasi
+      adipisci.</p>
+  </div>
 </main>
 
-<div class="container-fluid bg-3 text-center">    
+<div class="container-fluid bg-3 text-center">
   <h3>Memes to inspire you</h3><br>
-  
+
   <div class="row">
     {{!-- EXAMPLE PICTURES --}}
     <div class="col-sm-3">
       <p>Lorem ipsum</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
     </div>
-    <div class="col-sm-3"> 
+    <div class="col-sm-3">
       <p>Dolor sit amet</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
     </div>
-    <div class="col-sm-3"> 
+    <div class="col-sm-3">
       <p>Consectetur adipisicing elit</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
     </div>
@@ -36,7 +38,7 @@
     </div>
     {{!-- END EXAMPLE PICTURES --}}
 
-    
+
     {{!-- REAL HBS  METHOD TO FIND 4 MOST RECENT MEMES--}}
     {{#each memes}}
     <div class="col-sm-3">
@@ -45,13 +47,21 @@
     </div>
     {{/each}}
     {{!-- END REAL HBS --}}
-    </div>
-    <br>
-    
+  </div>
+  <br>
 
-    <form class="form-inline" action="/collection" method="GET">
-        <button class="form-control mr-sm-2" type="submit">See more</button>
-      </form>
-    
   
+  
+  <form class="form-inline" action="/collection" method="GET">
+    <button class="form-control mr-sm-2" type="submit">See more</button>
+  </form>
+
+{{#if isLoggedin}}
+<br>
+  <form class="form-inline" action="/create" method="GET">
+    <button class="form-control mr-sm-2" type="submit">Create a meme</button>
+  </form>
+  <br>
+  {{/if}}
+
 </div><br>
