add img to homepage

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
 
   <div class="row">
     {{!-- EXAMPLE PICTURES --}}
-    <div class="col-sm-3">
+    {{!-- <div class="col-sm-3">
       <p>Lorem ipsum</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
     </div>
@@ -35,7 +35,7 @@
     <div class="col-sm-3">
       <p>Consectetur quaerat</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
+    </div> --}}
     {{!-- END EXAMPLE PICTURES --}}
 
 
